--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,26 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.129",
     "@mui/material": "^5.12.0",
     "@mui/x-data-grid": "^6.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.5.0",
+    "socket.io-client": "^4.6.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "collect": "react-scripts build && npm run clean-up && npm run build-rename && npm run copy-buildfiles",
+    "clean-up": "rm -rf ../../PaddleOCR/static/*",
+    "build-rename": "npm run build-rename-js && npm run build-rename-css",
+    "build-rename-logo": "renamer --find '([^\\.])\\.[^\\.]+\\.(\\w+)' --replace '$1.$2' build/static/media/*",
+    "build-rename-js": "renamer --find '/main\\.[^\\.]+\\.js/g' --replace 'main.js' build/static/js/*.js",
+    "build-rename-css": "renamer --find '/main\\.[^\\.]+\\.css/g' --replace 'main.css' build/static/css/*.css",
+    "copy-buildfiles": "npm run copy-build-js && npm run copy-build-css && npm run copy-build-logo",
+    "copy-build-logo": "copyfiles -f 'build/static/media/*' '../../PaddleOCR/static/img/'",
+    "copy-build-js": "copyfiles -f 'build/static/js/*.js*' '../../PaddleOCR/static/js/'",
+    "copy-build-css": "copyfiles -f 'build/static/css/*.css*' '../../PaddleOCR/static/css/'"
   },
   "eslintConfig": {
     "extends": [
@@ -41,5 +54,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "copyfiles": "^2.4.1",
+    "renamer": "^4.0.0"
   }
 }
